# simple_xml_serialize

./: Cargo.toml  LICENSE  README.md
benches/: my_benchmark.rs
simple_xml_serialize_macro/: Cargo.toml  README.md
simple_xml_serialize_macro/src/: lib.rs
simple_xml_serialize_macro/tests/: integration_tests.rs
src/: lib.rs
