[package]
name = "simple_xml_serialize_macro"
version = "0.2.0"
authors = ["cptbobossa <cptbobossa@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = ["serialization","xml"]
repository = "https://github.com/cptbobossa/simple_xml_serialize"
description = "A Rust XML serialization library"
categories = ["encoding"]
include = ["LICENSE", ".gitignore", "Cargo.toml", "src/*.rs", "tests/*.rs"]

[lib]
proc-macro = true

[dependencies]
quote = "0.6.3"

[dependencies.syn]
version = "0.15"
features = ["full", "extra-traits"]

[dev-dependencies]
simple_xml_serialize = { version = "0.1.0", path = "../" }

[features]
process_options = []